<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Tour Guide Limassol</string>
    <string name="title_activity_maps">Maps</string>
    <string name="mapDisplay">Map Display</string>
    <string name="gallery">Gallery of:</string>
   
    <string name="title_activity_poi_info">PoiInfo</string>
    <string name="title_activity_poi_browser">PoiBrowser</string>
    <string name="wikipedia">Wikipedia:</string>
    <string name="navigation">Navigate to:</string>
    <string name="share">Share:</string>
    <string name="map_settings">Settings</string>
    <string name="title_activity_map_about">Info</string>
	<string name="map_about">This map is using Google Maps Api V2 and it displays the markers and your position on the map.</string>
	<string name="marker_address">Address:</string>
	<string name="poi_actions">Actions</string>
	<string name="title_activity_fullscreen">Full Screen</string>
	<string name="music">Music</string>
	<string name="present">Present</string>
	<string name="past">Past</string>
	<string name="categories">Pois Categories</string>
	<string name="about">"
	    Copyright [2013] [Michail Anastasiou, Andreas Andreou, Cyprus University Of Technology]

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
   
   
   This project is using Android Augmented Reality Framework.
   The information on points of interest are from the book 
   \"BEFORE TRACES DISAPPEAR LIMASSOL, THE OLD TOWN THROUGH EDWARD'S LENS\" by Titos Kolotas - Anna Maragou and the book
   \"Lemesos - Anadromi Mnimis\" by Tasos A. Andreou "</string>
	<string name="title_about">About</string>
	<string name="overflow">Overflow</string>
	<string name="menu_settings">Settings</string>
	<string name="network_settings">Network Settings</string>
	<string name="info">Info</string>
</resources>