<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/mapDisplay"
        android:orderInCategory="1"
        android:showAsAction="always|withText"
        android:title="@string/mapDisplay" android:icon="@drawable/ic_action_map_display">
    </item>
    <item
        android:id="@+id/overflow"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/overflow"
        android:icon="@drawable/ic_action_overflow"
        >
    <menu>
        <item
        android:id="@+id/network_connection"
        android:orderInCategory="1"
        android:title="@string/network_settings" >
    </item>
    <item
        android:id="@+id/settings"
        android:orderInCategory="2"
        android:title="@string/map_settings" >
    </item>
    <item
        android:id="@+id/info"
        android:orderInCategory="3"
        android:title="@string/info" >
    </item>
    </menu>
    </item>

</menu>